app/assets/stylesheets/messages.scss
.message-index-box {
	max-width: 62vw;
	width: 100%;
	height: 100vh;
	padding-bottom: 20px;
	display: flex;
	flex-direction: column;
	box-sizing: border-box;
	user-select: text;
	justify-content: space-between;
	font-family: Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;
}

.channel-name {
	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 2px 0 rgba(0, 0, 0, 0.06);
	display: flex;
	align-items: center;
	height: 48px;
	padding: 0 8px 0 12px;
}

.not-form-box {
	display: flex;
	align-items: center;
	padding: 20px;
	margin-top: 15px;
	color: rgba(255, 255, 255, 0.7);
}

.message-group {
	border-bottom: 1px solid #3e4146;
	margin: 10px 20px;
	padding: 20px 0;
	color: rgba(255, 255, 255, 0.7);
	display: flex;
}

.message-content {
	display: flex;
	flex-direction: column;
	max-width: calc(100% - 60px);
}

span.username {
	max-width: none;
	font-size: 16px;
	font-weight: 600;
	color: #fff;
	text-overflow: inherit;
}

.user-icon {
	background-image: image-url("icons8-pacman-50.png");
	height: 40px;
	width: 40px;
	background-size: 40px;
	background-repeat: no-repeat;
	padding-left: 20px;
}

.message-body {
	margin-top: 5px;
	font-size: 14px;
	white-space: pre-wrap;
	word-wrap: break-word;
	line-height: 1.3;
	user-select: text;
}

.message-input-box {
	display: flex;
	align-items: center;
	flex: 1 1 auto;
	min-height: 40px;
	max-height: 145px;
	border-radius: 5px;
	box-sizing: border-box;
}
.chat-log {
	height: 100%;
	overflow: scroll;
	scroll-behavior: smooth;
}
textarea.chat-input {
	height: auto;
	color: #bec2be;
	font-size: 13px;
	font-weight: 400;
	letter-spacing: -0.9px;
	line-height: 1.25rem;
	margin: 2px 2px 2px 2px;
	max-height: 144px;
	min-height: 20px;
	padding: 10px;
	width: 100%;
	background-color: rgba(114, 118, 125, 0.3);
	border: none;
	border-radius: 5px;
	resize: none;
}

.message-subscriber-box {
	display: flex;
	width: 100vw;
	justify-content: space-between;
}

.new-channel-message {
	padding: 10px;
}

.subscriber-buffer {
	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 2px 0 rgba(0, 0, 0, 0.06);
	background: rgb(52, 57, 62);
	align-items: center;
	height: 48px;
	width: 100%;
	padding: 0 8px 0 12px;
}

.subscriber-title {
	padding-top: 100px;
}

.subscriber-box-inner {
	padding-right: 100px;
}

.subscriber-title {
	padding-top: 65px;
	color: #99aab5;
	font-size: 12px;
	font-weight: 500;
	height: 28px;
	letter-spacing: 0.2px;
	overflow: hidden;
	padding-left: 16px;
	padding-right: 8px;
	text-overflow: ellipsis;
	text-transform: uppercase;
	white-space: nowrap;
	color: hsla(0, 0%, 100%, 0.4);
}

.sub-content {
	padding: 5px;
	padding-left: 17px;
	color: #b9bbbe;
}

